fix style css how.

--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ p {
 }
 
 #how .who-img {
-    background: url('../img/frontpage.jpg') no-repeat center center/cover;
+    background: url('../img/showcase.jpg') no-repeat center center/cover;
 }
 
 /* Section: Clients */
