--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 * {
     box-sizing: border-box;
-    margin:0;
+    margin: 0;
     padding: 0;
 }
 
@@ -28,7 +28,7 @@ p {
 }
 
 .text-center {
-    text-align:center;
+    text-align: center;
 }
 
 .text-primary {
@@ -67,13 +67,29 @@ p {
     margin-bottom: 2rem;
 }
 
-.py-1 { padding: 1.5rem 0; }
-.py-2 { padding: 2rem 0; }
-.py-3 { padding: 3rem 0; }
+.py-1 {
+    padding: 1.5rem 0;
+}
 
-.p-1 { padding: 1.5rem; }
-.p-2 { padding: 2rem; }
-.p-3 { padding: 3rem; }
+.py-2 {
+    padding: 2rem 0;
+}
+
+.py-3 {
+    padding: 3rem 0;
+}
+
+.p-1 {
+    padding: 1.5rem;
+}
+
+.p-2 {
+    padding: 2rem;
+}
+
+.p-3 {
+    padding: 3rem;
+}
 
 .btn {
     display: inline-block;
@@ -108,7 +124,7 @@ p {
 #navbar {
     display: flex;
     position: sticky;
-    top:0;
+    top: 0;
     background: #1b273d;
     color: #fff;
     justify-content: space-between;
@@ -151,10 +167,10 @@ p {
     /* Overlay */
     position: absolute;
     top: 65px;
-    left:0;
+    left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 /* Section: What App Does */
