--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ p {
     height: 100%;
     padding: 0 2rem;
     /* Overlay */
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     right: 0;
