--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ p {
 
 /* Showcase */
 #showcase {
-    position: absolute;
+    position: relative;
     background: #333 url('../img/showcase.jpg') no-repeat center center/cover;
     height: 100vh;
     color: #fff;
