--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,7 @@ p {
     #navbar .logo {
         margin-bottom: 0.5rem;
         text-align: center;
+        justify-content: center;
     }
 
     #navbar ul {
